# labs

./: README.md  hello  hello.S  pp.c
lab0/: README.md  hello
lab00/: README.md  lib.c  main.c
lab01/: README.md  schema.odg
lab02/: README.md  my_graph.txt  plot.c  while.c
lab04/: 00_distance.py  01_circle.py  02_operations.py  04_my_family.py  10_store.py  README.md
lab05/: 2.py  README.md  well_done.csv  well_done.py
lab06/: 1.py  2.py  README.md
lab07/: 2wo.py
lab08/: 1.py  2.py  README.md  max1.py  max2.py
lab09/: README.md  max.py
lab1/: .README.md.kate-swp  .~lock.schema.odg#  README.md  lab1  lab1.c
lab10/: .gitignore  README.md  pyproject.toml
lab10/src/lab10_package/: lab10_package.py  lab7.py  lab8.py  lab9.py
lab10/src/lab10_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lab11/: README.md  lab11.py  max.py
lab12/: .README.md.swp  .apackage.py.swp  .bal.py.swp  .main.py.swp  .par.py.swp  .tet.py.swp  README.md  apackage.py  bal.py  main.py  par.py  tet.py
lab13/: LICENSE.txt  README.md  Sphere.py  Tetrahedron.py  apackage.py  lab13.kv  main.py  pyproject.toml  report.docx
lab13/src/lab13/: Parallelepiped.py  Shape.py  __init__.py  apackage.py  lab13.kv
lab14/: README.md  diag.odg  lab14.db  lab14.py  tutorial.db
lab15/: README.md  lab15.py  requirements.txt  Список прилунений — Википедия.html
lab16/: IOCCC.html  README.md  lab16.db  lab16.py  log.txt  requirements.txt
lab17/: README.md  lab17.py  log.txt  requirements.txt
lab2/: .~lock.schema.odg#  README.md  a.out  for.c  my_graph.txt  plot.c  plot.gpi  (+2 more)
(+32 files in other folders)
