[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab10_package"
version = "0.0.1"
authors = [
  { name="Anatoly Mikhaylov", email="nevazno@nevazno.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: None",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tolyprog/labs/lab10"

